<resources>
    <string name="app_name">DeliveryService</string>
    <string name="action_settings">Settings</string>
    <string name="edit_message">Edit a message</string>
    <string name="send_email">Send e-mail</string>
    <string name="add_email">Enter email address</string>
    <string name="title_email">Title</string>
    <string name="description_email">Description</string>
    <string name="add_name">Name</string>
    <string name="add_description">Description</string>
    <string name="add_submit">Save</string>
    <string name="date_picker_title">Start Date</string>


    <string name="no_comments">No comments</string>
    <string name="loading_comments">Loading comments...</string>
    <string name="loading_products">Loading products...</string>
    <string name="cd_products_list">Products list</string>
    <string name="cd_comments_list">Comments list</string>
    <string name="cd_product_name">Name of the product</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
